--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,8 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth
+}
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap')
